Modif receive sms new functionnality: input text to enter a phone number and send the geoloc text new functionnality: google maps & auto target on the map from the coord received by sms

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile(name:'camera-lifisdk-android-v0.1', ext:'aar')
+    implementation 'com.google.android.gms:play-services-maps:11.6.2'
 }
 
 repositories {
